--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -28,8 +28,7 @@ body {
 
 h1 {
     text-align: center;
-    color:rgb(107, 164, 244); 
-    margin-bottom: 20px;
+    color: #2a2a2a;; 
 }
 
 form {
