--- a/CSS/projetos.css
+++ b/CSS/projetos.css
@@ -1,43 +1,27 @@
 .projetos {
     width: 1000px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 cards por linha */
+    grid-template-columns: repeat(3, 1fr); /* 2 cards por linha */
     gap: 40px;
     padding: 20px;
-    margin: 100px auto 0 auto;
+    margin: 50px auto 0 auto;
 }
 
 .project-card {
-    background-color: lightgrey;
+    width: 250x;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column; /* Layout padrão (imagem em cima, texto embaixo) */
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    height: 400px; /* Altura fixa para os cards */
-    width: 100%;
-    overflow: hidden;
-}
-
-.project-card.horizontal {
-    flex-direction: row; /* Para imagens verticais, texto ao lado */
-    height: 250px; /* Ajustar altura para layout horizontal */
+    overflow: hidden; /* Esconde as bordas arredondadas da imagem */
 }
 
 .project-img img {
-    width: 100%; /* Faz a imagem ocupar toda a largura */
+    width: ; /* Faz a imagem ocupar toda a largura */
     height: auto; /* Mantém a proporção original */
-    object-fit: cover; /* Ajuste para imagens horizontais */
-    flex-shrink: 0; /* Previne o redimensionamento em layouts flexíveis */
     border-radius: 5px 5px 0 0; /* Arredonda as bordas superiores */
-}
-
-.project-card.horizontal .project-img img {
-    width: auto; /* Para imagens verticais, ocupar a altura */
-    height: 100%; /* Ocupa todo o espaço vertical */
-    border-radius: 5px 0 0 5px; /* Arredonda as bordas laterais */
 }
 
 .project-text {
@@ -45,8 +29,4 @@
     font-size: 16px;
     color: #333;
     text-align: center;
-}
-
-.project-card.horizontal .project-text {
-    text-align: left; /* Ajusta o texto ao lado da imagem */
 }
