--- a/CSS/page.css
+++ b/CSS/page.css
@@ -56,7 +56,7 @@ header{
     background: url('../images/background.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: calc(100vh - 60px);
     width: 100%;
     margin: 0 auto;
     opacity: 75%;
